examples/test/testpolicy6762.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6762
  namespace: namespace4
spec:
  podSelector:
    matchLabels:
      key32: value46
      key5: value40
      key33: value17
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key17: value39
          key32: value36
      podSelector:
        matchLabels:
          key3: value20
